Fix z-index issues with the bulk actions area

--- a/resources/css/elements/tables.css
+++ b/resources/css/elements/tables.css
@@ -16,7 +16,7 @@
 }
 
 .data-list-bulk-actions {
-	@apply bg-white absolute w-full py-2 z-10;
+	@apply bg-white absolute w-full py-2;
 	padding-left: 56px;
 }
 
